   - Add configuration option DatabaseSynchronous for changing the SQLite
     setting of the "synchronous" flag, see
     https://www.sqlite.org/pragma.html#pragma_synchronous for more details
   - Show warning in log if writing cached data to database is slow
   - Try database query for up to 5 seconds when database is busy or locked
     instead of giving up immediately


2.2 / 28-Apr-2018

 - Fixed
   - O_CLOEXEC undeclared error when compiling with glibc older than 2.12
   - Image output --headertext wasn't being applied to some output types
   - DefaultDecimals setting wasn't controlling all outputs
   - Traffic rate for the last entry of the 5 minute resolution list wasn't
     being correctly calculated
 - New
   - Detection of 32-bit / 64-bit kernel interface counters for improving
     traffic calculations in rollover situations, cfg: 64bitInterfaceCounters
   - Possibility in queries to merge data from multiple interfaces to one
     output with interface1+interface2 syntax
   - Highlight current day in top list when visible
   - Changes in interface specific detected bandwidth limits are reported
     in the log
   - UpdateInterval value is automatically adjusted during daemon startup if
     found to be too high compared to the value of MaxBandwidth
 - Notes
   - Added clarification to the man page that the 'jsonversion' and
     'xmlversion' fields in the --json and --xml outputs should be seen as
     the API version and compared to the previously used version in 3rd party
     implementations for verifying compatibility
   - Default value of UpdateInterval is now 20 instead of previous 30 seconds


2.1 / 6-Dec-2018

 - Fixed
   - --oneline could segmentation fault if database had total traffic values
     set but didn't have any daily or monthly traffic (Arch bug #60588)
   - No proper error message was produced when querying interface which didn't
     exist in the database
   - Several typos and spelling mistakes in documentation